--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,8 +28,8 @@ jobs:
         with:
           cache-version: 1
         env:
-          RENV_CONFIG_REPOS_OVERRIDE: https://packagemanager.rstudio.com/all/latest
-
+          #          RENV_CONFIG_REPOS_OVERRIDE: https://packagemanager.rstudio.com/all/latest
+          RENV_CONFIG_REPOS_OVERRIDE: https://colorado.posit.co/rspm/all/latest
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
