--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -55,4 +55,4 @@ jobs:
           api-key: ${{ secrets.CONNECT_API_KEY }}
           access-type: logged_in
           dir: |
-            /github-actions
+            .:/github-actions
